[gd_scene load_steps=3 format=2]

[ext_resource path="res://Enemy.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 20, 35 )

[node name="Enemy" type="KinematicBody2D" groups=[
"enemies",
]]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -20.0
margin_top = -35.0
margin_right = 20.0
margin_bottom = 35.0
color = Color( 0.952941, 0.643137, 0.156863, 1 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
__meta__ = {
"_editor_description_": ""
}

[node name="SeeingRaycast" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 25, 0 )

[node name="PlayerVisionRaycast" type="RayCast2D" parent="."]
position = Vector2( 0, -16.872 )
enabled = true
cast_to = Vector2( 288, 0 )

[node name="JumpRaycast" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 40 )
__meta__ = {
"_editor_description_": ""
}

[node name="FloorRaycast" type="RayCast2D" parent="."]
position = Vector2( 14, 0 )
enabled = true
cast_to = Vector2( 0, 40 )
__meta__ = {
"_editor_description_": ""
}

[node name="VisionColorRect" type="ColorRect" parent="."]
margin_left = 16.0
margin_top = -32.0
margin_right = 296.0
margin_bottom = 8.0
color = Color( 1, 1, 1, 0.333333 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BulletSpawnPoint" type="Position2D" parent="."]
position = Vector2( 40, 0 )

[node name="FireTimer" type="Timer" parent="."]
wait_time = 1.5
[connection signal="timeout" from="FireTimer" to="." method="_on_FireTimer_timeout"]
